tests/A1/tests/accept/accept_a1only/nullFunc.ul
void main(){
    int result;

    result = not_a_function(2,4);
}