tests/A1/tests/reject/emptyChar.ul
void main(){
    char c;
    c = '';
}